<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso" />

    <ProgressBar
        android:id="@+id/pbarProgreso"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:max="100"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSinHilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin_hilos"
        android:layout_below="@+id/pbarProgreso"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <Button
        android:id="@+id/btnHilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_hilo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="192dp" />



    <Button
        android:id="@+id/btnAsyncDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asynctask_dialog"
        android:layout_alignTop="@+id/btnHilo"
        android:layout_alignEnd="@+id/pbarProgreso"
        android:layout_marginTop="83dp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_alignTop="@+id/btnSinHilos"
        android:layout_toEndOf="@+id/btnSinHilos" />

    <Button
        android:id="@+id/btnAsyncTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_asynctask"
        android:layout_below="@+id/btnCancelar"
        android:layout_alignParentStart="true" />

</RelativeLayout>
